--- a/code/Makefile
+++ b/code/Makefile
@@ -3,3 +3,13 @@ test:
 
 coverage:
 	nosetests utils --with-coverage --cover-package=utils 
+
+behavioral_regression:
+	python logistic_regression.py
+pda_outliers:
+	python outlier_test_plot.py
+pda_smooth:
+	python make_plots_smoothing.py
+neural_regression: 
+	python plot_slices.py
+
