--- a/code/Makefile
+++ b/code/Makefile
@@ -6,10 +6,15 @@ coverage:
 
 behavioral_regression:
 	python logistic_regression.py
+
 pda_outliers:
 	python outlier_test_plot.py
+
 pda_smooth:
 	python make_plots_smoothing.py
+
 neural_regression: 
 	python plot_slices.py
 
+mvpa:
+	python mvpa.py all
